logs/podparser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/podparser'...
Compiling './lib/python3.5/site-packages/podparser/checker.py'...
***   File "./lib/python3.5/site-packages/podparser/checker.py", line 376
    print '*** Error invalid latlon: %s: %s' % (points, e)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/podparser/db'...
Compiling './lib/python3.5/site-packages/podparser/db/connection.py'...
***   File "./lib/python3.5/site-packages/podparser/db/connection.py", line 50
    print 'Failed to create DB connection %s' % e
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/podparser/directory.py'...
***   File "./lib/python3.5/site-packages/podparser/directory.py", line 57
    print '*** Cannot read directory: %s ***' % self.path
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/podparser/etc'...
Compiling './lib/python3.5/site-packages/podparser/fetcher.py'...
***   File "./lib/python3.5/site-packages/podparser/fetcher.py", line 41
    print arg_parser.print_help()
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/podparser/geo'...
Compiling './lib/python3.5/site-packages/podparser/geo/encoder.py'...
***   File "./lib/python3.5/site-packages/podparser/geo/encoder.py", line 48
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/podparser/parser.py'...
***   File "./lib/python3.5/site-packages/podparser/parser.py", line 44
    print '\nParse took: %d secs' % td.seconds
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/podparser-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
